tests/ui/feature-gates/feature-gate-asm-flag-out.stderr
error[E0658]: flag_out operands for inline assembly are unstable
  --> $DIR/feature-gate-asm-flag-out.rs:9:17
   |
LL |                 flag_out("c") carry,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(asm_flag_out)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
